--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 ## Custom files
 *.bat
-*.pdf
-*.yaml
 *.html
+*.yaml
+*.cmd
+.npmrc
 ## --------------------
 
 # Created by https://www.gitignore.io/api/java,gradle,windows,intellij+all,visualstudiocode
